syntax = "proto3";

import "Protos/base_types.proto";

service BotGetter{
  rpc GetBotById (GetBotRequest) returns (Bot);
}
message GetBotRequest{
  int32 bot_id =1;
}